test_suite5/ALAN/test_suite/alan-2022-examples/failing/006210_mutation.alan
source r7 begin leave 6 >= source z begin relax end 1 end
